kelvin: the search results

--- a/search-results.html
+++ b/search-results.html
@@ -17,7 +17,7 @@
     <!-- style CSS -->
     <link href="css/style.css" rel="stylesheet" />
     <!-- Document Title -->
-    <title>SarchHolm - Real Estate HTML Template</title>
+    <title>Search results</title>
 </head>
 
 <body>
