kelvin: some many changes

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                                 <div class="col-sm-12 col-md-6 px-0 mapPlace">
 
                                     <div class="map-container nowRide animated fadeIn">
-                                        <div class="p-5 text-right position-relative z-index-1">
+                                        <div class="p-5 text-right position-relative z-index-1 d-none">
                                             <h5 class="text-right p-0 m-0">Order a taxi Now!</h5>
                                             <small>Do it at ease</small>
                                             <hr class="w-100">
@@ -448,7 +448,7 @@
                 </div>
             </div>
         </div>
-        <div class="property-place pb-60 hideme bg-light">
+        <div class="property-place pb-60 hideme bg-light d-none">
             <div class="container">
                 <div class="row">
 
@@ -495,7 +495,7 @@
         <!--Popular City ends-->
 
         <!--Promo Section starts-->
-        <div class="promo-section pt-130 v2">
+        <div class="promo-section pt-130 v2 d-none">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-5 col-lg-12">
@@ -574,7 +574,7 @@
 
 
         <!--Testimonial Section start-->
-        <div class="hero-client-section mt-140 pb-5">
+        <div class="hero-client-section mt-140 pb-5 d-none">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
