kelvin: the receipt page

--- a/search-results.html
+++ b/search-results.html
@@ -38,7 +38,7 @@
                             <div class="col-lg-2 col-md-6 col-9 order-2 order-xl-1 order-lg-1 order-md-1">
                                 <a class="navbar-brand" href="index.html"><img src="images/logo-white.png" alt="logo" class="img-fluid"></a>
                             </div>
-                            <div class="col-lg-6 col-md-1 col-3  order-3 order-xl-2 order-lg-2 order-md-3 pl-xs-0">
+                            <div class="col-lg-6 col-md-1 col-3  order-3 order-xl-2 order-lg-2 order-md-3 pl-xs-0 d-none">
                                 <nav class="site-navigation text-right">
                                     <div class="container">
                                         <ul class="site-menu js-clone-nav d-none d-lg-block">
@@ -2001,7 +2001,7 @@
                                 
                                 <h4>Payment Processed</h4>
                                 <p class="text-muted mt-2"> The Payement went through, click the button below to print the receipt</p>
-                                <a href="PrintDocs/Receipt/slip33.html" class="btn btn-success mb-5 print-receipt-btn" target="_blank">Print Receipt</a>
+                                <a href="PrintDocs/Receipt/slip33.html" class="btn btn-success mb-5 print-receipt-btn">Print Receipt</a>
                             </div>
                         </div>
                     </div>
