--- a/index.html
+++ b/index.html
@@ -321,7 +321,23 @@
                                         <div class="col-sm-12 col-md-6">
                                             <div class="form-group">
                                                 <label>
-                                                    <h6 class="mb-0">Pick Up Date</h6>
+                                                    <h6 class="mb-0">Travel Date</h6>
+                                                </label>
+                                                <div class="d-flex">
+                                                    <div class="input-calendar w-100">
+                                                        <input type="text" class="form-control w-100 flatDate"
+                                                            placeholder="Select Date">
+                                                    </div>
+                                                    
+
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-12 col-md-6">
+                                            <div class="form-group">
+                                                <label>
+                                                    <h6 class="mb-0">Return Date</h6>
                                                 </label>
                                                 <div class="d-flex">
                                                     <div class="input-calendar w-100">
