kelvin: the logo and colors

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-2 col-md-6 col-9 order-2 order-xl-1 order-lg-1 order-md-1 ">
                                 <a class="navbar-brand" href="index.html">
-                                    <img src="images/logo-white.png" alt="logo" class="img-fluid"></a>
+                                    <img src="images/logo.png" alt="logo" class="img-fluid position-relative z-index-1"></a>
                             </div>
                             <div class="col-lg-6 col-md-1 col-3  order-3 order-xl-2 order-lg-2 order-md-3 pl-xs-0 d-none">
                                 <nav class="site-navigation text-right">
@@ -702,7 +702,7 @@
                 <div class="row nav-folderized">
                     <div class="col-lg-4 col-md-12">
                         <div class="footer-logo">
-                            <a href="index.html"> <img src="images/logo-white.png" alt="logo"></a>
+                            <a href="index.html"> <img src="images/logo.png" class="position-relative" alt="logo"></a>
                             <div class="company-desc">
                                 <p>
                                     Our customers continue to choose us as the number one taxi firm in Nairobi because
