--- a/list-fullwidth-leaflet-map.html
+++ b/list-fullwidth-leaflet-map.html
@@ -1749,7 +1749,7 @@
                 <div class="row nav-folderized">
                     <div class="col-lg-4 col-md-12">
                         <div class="footer-logo">
-                            <a href="index.html"> <img src="images/logo-white.png" alt="logo"></a>
+                            <a href="index.html"> <img src="images/logo.png"" alt="logo"></a>
                             <div class="company-desc">
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio excepturi nam totam sequi, ipsam consequatur repudiandae libero illum.
