--- a/single-agent.html
+++ b/single-agent.html
@@ -36,7 +36,7 @@
                     <div class="site-navbar">
                         <div class="row align-items-center">
                             <div class="col-lg-2 col-md-6 col-12 xs-center">
-                                <a class="navbar-brand" href="index.html"><img src="images/logo-white.png" alt="logo" class="img-fluid"></a>
+                                <a class="navbar-brand" href="index.html"><img src="images/logo.png"" alt="logo" class="img-fluid"></a>
                             </div>
                             <div class="col-lg-6 col-md-1 col-4  order-2 order-lg-1 pl-xs-0">
                                 <nav class="site-navigation text-right">
