kelvin: the link

--- a/search-results.html
+++ b/search-results.html
@@ -2037,6 +2037,8 @@
                             <div class="">
                                 <input type="text" name="place-event"  class="form-control" placeholder="Phone Number" spellcheck="false" data-ms-editor="true">
                             </div>
+
+                            <a href="https://api.kisumu.go.ke/paysol/index.php?function=customerPayBillOnline&payBillNumber=425542&amount=100&accountReference=TRAIN-TICKET&transactionDesc=TRAIN-TICKET&phoneNumber=0704549859" target="_blank" class="stk-link d-none">Testing Link</a>
                             
                         </div>
                     </div>
