kelvin: some changes

--- a/search-results.html
+++ b/search-results.html
@@ -2032,7 +2032,7 @@
 
                         <div class="form-group phone-num">
                             <label>
-                                <h6 class="mb-0">Enter Phone Number To pay with</h6>
+                                <h6 class="mb-0">Enter Phone Number To pay with.</h6>
                             </label>
                             <div class="">
                                 <input type="text" name="place-event"  class="form-control" placeholder="Phone Number" spellcheck="false" data-ms-editor="true">
